new homemade routing

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
   <body>
-    <div id="content"></div>
+    <div id="content"><!-- {{outlet}} --></div>
     <script src="js/bundle.js"></script>
   </body>
 </html>
