--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,11 @@
   <body>
     <div id="content"></div>
     <script src="/js/bundle.js"></script>
+    <script>
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', 'UA-2878955-3', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script async src='//www.google-analytics.com/analytics.js'></script>
   </body>
 </html>
