google crawl id

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="dig.ccMixter Music discovery site operated by ArtisTech Media, founded by Creative Commons">
-    <title>dig.ccMixter Free Music For Film and Video Makers</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="free,music,discovery,royalty free,soundtrack,video,media">
+    <title>dig.ccMixter Free Music For Film, Games and Video Makers</title>
+    <meta name="google-site-verification" content="GwK6_cxs1RSrlToijWOW5CApaA_Q_photR4s6gktnYA" />    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="free,music,discovery,royalty free,games,soundtrack,video,media">
     <script src="/js/vendor.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/vendor.css">
     <link rel="stylesheet" type="text/css" href="/css/app.css">
