bug fix on filter options

--- a/public/dig.html
+++ b/public/dig.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="free,music,discovery,royalty free,games,soundtrack,video,media">
     <script src="/js/vendor.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/vendor.css">
-    <link rel="stylesheet" type="text/css" href="/css/app.css">
+    <link rel="stylesheet" type="text/css" href="/css/dig.css">
     <script type="application/ld+json">
     {
       "@context": "http://schema.org",
@@ -33,7 +33,7 @@
     </head>
   <body>
     <div id="content"></div>
-    <script src="/js/bundle.js"></script>
+    <script src="/js/dig.js"></script>
     <script>
       window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
       ga('create', 'UA-2878955-3', 'auto');
