stems browser stuff

--- a/public/stems/index.html
+++ b/public/stems/index.html
@@ -2,22 +2,22 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="pells.ccMixter A Cappella discovery site operated by ArtisTech Media, founded by Creative Commons">
-    <title>pells.ccMixter A Cappella Browser</title>
+    <meta name="description" content="stems.ccMixter A Cappella discovery site operated by ArtisTech Media, founded by Creative Commons">
+    <title>stems.ccMixter A Cappella Browser</title>
     <meta name="google-site-verification" content="GwK6_cxs1RSrlToijWOW5CApaA_Q_photR4s6gktnYA" />    
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="free,music,pells,remix,a cappella,acapella,royalty free,media">
+    <meta name="keywords" content="free,music,stems,samples, remix,royalty free,media">
     <script src="/js/vendor.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/vendor.css">
-    <link rel="stylesheet" type="text/css" href="/css/pells.css">
+    <link rel="stylesheet" type="text/css" href="/css/stems.css">
     <script type="application/ld+json">
     {
       "@context": "http://schema.org",
       "@type": "Organization",
-      "url": "http://pells.ccmixter.org",
-      "name" : "pells.ccMixter",
-      "alternateName" : "ccMixter A Cappella Browser",
-      "logo": "http://pells.ccmixter.org/images/logo-black.png",
+      "url": "http://stems.ccmixter.org",
+      "name" : "stems.ccMixter",
+      "alternateName" : "ccMixter Samples & Stems Browser",
+      "logo": "http://stems.ccmixter.org/images/logo-black.png",
         "sameAs" : [
           "https://twitter.com/ccmixtermusic",
           "https://www.youtube.com/channel/UCU7QBXVX4gcePOcEyha7yng",
@@ -26,7 +26,7 @@
         ],
        "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://pells.ccmixter.org/search?searchp={search_term_string}",
+        "target": "https://stems.ccmixter.org/search?searchp={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
@@ -34,7 +34,7 @@
     </head>
   <body>
     <div id="content"></div>
-    <script src="/js/pells.js"></script>
+    <script src="/js/stems.js"></script>
     <script>
       window.ga=window.ga||function(){};      
     </script>
