--- a/public/playlists/index.html
+++ b/public/playlists/index.html
@@ -3,10 +3,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="playlists.ccMixter Playlist site operated by ArtisTech Media, founded by Creative Commons">
-    <title>playlists.ccMixter A Cappella Browser</title>
+    <title>playlists.ccMixter</title>
     <meta name="google-site-verification" content="GwK6_cxs1RSrlToijWOW5CApaA_Q_photR4s6gktnYA" />    
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="free,music,playlists,remix,a cappella,acapella,royalty free,media">
+    <meta name="keywords" content="free,music,playlists,remix,royalty free,media">
+    <meta property=”og:image” content=”http://playlists.ccmixter.org/images/logo-black.png” />
     <script src="/js/vendor.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/vendor.css">
     <link rel="stylesheet" type="text/css" href="/css/playlists.css">
@@ -16,7 +17,7 @@
       "@type": "Organization",
       "url": "http://playlists.ccmixter.org",
       "name" : "playlists.ccMixter",
-      "alternateName" : "ccMixter A Cappella Browser",
+      "alternateName" : "ccMixter Playlists",
       "logo": "http://playlists.ccmixter.org/images/logo-black.png",
         "sameAs" : [
           "https://twitter.com/ccmixtermusic",
