fb friendly imgsize2

--- a/public/playlists/index.html
+++ b/public/playlists/index.html
@@ -7,7 +7,7 @@
     <meta name="google-site-verification" content="GwK6_cxs1RSrlToijWOW5CApaA_Q_photR4s6gktnYA" />    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="free,music,playlists,remix,royalty free,media">
-    <meta property="og:image" content="http://playlists.ccmixter.org/images/logo-black.png" />
+    <meta property="og:image" content="http://playlists.ccmixter.org/images/logo-black-200.png" />
     <script src="/js/vendor.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/vendor.css">
     <link rel="stylesheet" type="text/css" href="/css/playlists.css">
