--- a/satellites/pells/index.html
+++ b/satellites/pells/index.html
@@ -69,7 +69,7 @@
                             <div class="row" >
                                 <div class="col-md-8 col-md-offset-1 col-sm-11 col-sm-offset-1 col-xs-12" >
                                     <h1 >Ask Not For Whom the Pells Toll</h1>
-                                    <h3 ><span >Now serving </span><span >4,961</span><span > Creative Commons a cappellas </span></h3></div>
+                                    <h3 ><span >Now serving over 5,000 Creative Commons a cappellas </span></h3></div>
                             </div>
                         </div>
                         <div class="row gso-links panel-group" >
