--- a/satellites/playlists/index.html
+++ b/satellites/playlists/index.html
@@ -36,6 +36,21 @@
 </head>
 
 <body>
+    <style>
+    .beta {position: absolute;
+    width: 100px;
+    top: 10;
+    display: hidden;
+    z-index: 200;
+    left: 300;
+    padding: 6px;
+    background: white;
+    text-align: center;
+    border-radius: 8px;
+    letter-spacing: 2;
+    font-weight: 500;}
+    </style>
+    <div class="beta">BETA</div>
     <div id="content">
         <div >
             <div id="modal-container" ></div>
@@ -49,10 +64,10 @@
                             <a href="http://<%= satellite_host %>/" class="navbar-brand" ><img src="./playlists_files/logo.png" ></a>
                         </div>
                         <div class="collapse navbar-collapse" id="dig-collapse" >
-                            <div role="search" class="navbar-form navbar-right" >
+                            <!-- div role="search" class="navbar-form navbar-right" >
                                 <form id="search" method="GET" action="http://<%= satellite_host %>/playlists/search"class="form-group input-group input-group-sm" >
                                     <input type="text" class="form-control" value="" placeholder="genre, title, etc." size="30" id="searchText" ><span class="input-group-addon" ><a href="#" onclick="document.getElementById('search').submit(); return true;" ><i class="fa fa-search" ></i></a></span></form>
-                            </div>
+                            </div -->
                             <ul class="nav navbar-nav navbar-right" >
                                 <li >
                                     <a href="#" >
